--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container baground-header header">
-        <a class="header-img" href="index.html"><img src="logo.png" alt="nike"></a>
+        <a class="header-img" href="index.html"><img src="./img.src/logo.png" alt="nike"></a>
         <ul class="header-ul header-flex">
             <li class="header-list"><span>Main page</span></li>
             <li class="header-list"><span>Benefits</span></li>
@@ -23,7 +23,7 @@
     </header>
     <main class="container">
         <section class="section-baground ">
-            <a class="section-img" href="index.html"><img src="logo.png" alt="nike"></a>
+            <a class="section-img" href="index.html"><img src="./img.src/logo.png" alt="nike"></a>
             <ul class="text-decoration">
                 <li class="color-sectoin"><span>С&R</span></li>
                 <li>
